Fixed minor formatting issues in pom files.
(cherry picked from commit f1442f419b22b2a0d06653888f8c5c5ceb025cb5)

--- a/jdbc/pom.xml
+++ b/jdbc/pom.xml
@@ -103,6 +103,7 @@
                     <excludes>
                         <exclude>example/data/kafka_data.csv</exclude>
                         <exclude>**/*.iml</exclude>
+                        <exclude>**/*.log</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -136,7 +137,7 @@
                                                 </goals>
                                             </pluginExecutionFilter>
                                             <action>
-                                                <ignore />
+                                                <ignore/>
                                             </action>
                                         </pluginExecution>
                                     </pluginExecutions>
