--- a/iotdb/iotdb/conf/iotdb-engine.properties
+++ b/iotdb/iotdb/conf/iotdb-engine.properties
@@ -58,7 +58,7 @@ force_wal_period_in_ms=10
 ### Timestamp Precision Configuration
 ####################
 # Use this value to set timestamp precision as "ms", "us" or "ns".
-# Once the precision is been set, it can not be changed.
+# Once the precision has been set, it can not be changed.
 timestamp_precision=ms
 
 
